Fixes:toast bugs fixed alignment issues in mobile size

--- a/src/Components/toaststyles.css
+++ b/src/Components/toaststyles.css
@@ -17,7 +17,7 @@
     margin: auto;
     border-radius: 1rem;
     font-size: medium;
-    left: 1rem;
+    left: 1.5rem;
     position: absolute;
   }
 }
